KNOWN BUGS:
* Valgrind-2.1.X will interfere with writeactive, break fchmod. Use 2.0.
* The code sometimes uses timeout_client where it should use a server timeout.
|
20050412a: Changes since 20050324a:
- Feature: newsq -f will list the article bodies to be fetched in
  delaybody mode. Suggested by Cory C. Albrecht.
- Packaging: Drop obsolete README_FIRST file from .spec file to unwedge build.
  Reported by William Hooper.

20050324a: Changes since 20050321a:
- Documentation: manual pages have been revised, with some help from
  Dietrich Schaffer.
- Documentation: help output in programs has been revised.
- Bugfix: the deleted-articles journal was always empty. Reported by
  Jörg Lüders.

20050321a: Changes since 20050215a:
- INCOMPATIBLE Change: forward port configuration parser fix from
  leafnode-1.11, to allow the right hand side of configuration or filter
  file to be quoted, useful when the NUMBER SIGN character needs to be
  specified. This may require you to change the configuration when you
  are using NUMBER SIGN #, QUOTATION MARK " or BACKSLASH/REVERSE SOLIDUS \
  character on the right hand side (in passwords, PC regular expressions
  etc.) of a configuration line.
- Change: when deleting articles (supersedes, cancel, ...) and we don't
  rebuild the overview right away, store a line in a new file that marks
  the corresponding overview line invalid, so that the article is no
  longer offered in the overview. Reported by Jörg Lüders.
- Documentation: some parts of README* had been out of date and have
  been revised. Documentation flaws reported by Jens Kutilek.

20050215a: Changes since 20050110a:
- Bugfix: if log_poster_ip is enabled, strip existing
  X-Leafnode-NNTP-Posting-Host headers. Fixes Gnus newsreader warnings
  when superseding.
- Change: in postonly mode, log if there is nothing to post.

20050110a: Changes since 20050105a:
- Cleanup: Only use top-level Makefile.am, drop recursion.