@@ -97,6 +97,7 @@ Marcus Szumigala <MSzumigala@gmx.net>
 Mark Brown <broonie@tardis.ed.ac.uk>
 Mark Hannon <mark.hannon@stockholm.mail.telia.com>
 Martin Kissel <martinkissel@sharing.de>
+Matěj Cepl <matej@ceplovi.cz>
 Matt Armstrong <matt@lickey.com>
 Matthias Andree <matthias.andree@web.de>
 Matthias Flohr <mflohr@gmx.de>
