@@ -363,5 +363,6 @@ if test x$silent != xyes ; then
 fi
 
 AC_CONFIG_FILES([Makefile tools/sendbatch.bash leafnode.spec leafnode.8 newsq.1
-applyfilter.8 filterfile.5 fetchnews.8 rnews.8 texpire.8 checkgroups.8])
+applyfilter.8 filterfile.5 fetchnews.8 rnews.8 texpire.8 checkgroups.8
+sendbatch.1 leafnode-version.1])
 AC_OUTPUT
